<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currency Jamaica</string>
    <string name="action_settings">Settings</string>
    <string name="usd">USD</string>
    <string name="gbp">GBP</string>
    <string name="cad">CAD</string>
    <string name="eur">EUR</string>

    <string name="trader">Trader</string>
    <string name="buying">Buying</string>
    <string name="selling">Selling</string>
    <string name="enterAmount">Enter Amount</string>
    
    <string name="action_change_screen">Change Theme</string>
    
    <string name="disclaimer">Disclaimer: Exchange rates are subject to change without notice by each institution. This data is for informational use only.</string>
    <string name="info_open_source_an">An </string>
    <string name="info_open_source_project">"Project By: "</string>
</resources>
