<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".USDFragment" >

    <!-- TODO: Update blank fragment layout -->


	<EditText
	    android:id="@+id/amountEditText"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:gravity="center"
	    android:ems="10"
	    android:hint="@string/enterAmount"
	    android:inputType="number|numberDecimal" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:paddingLeft="@dimen/activity_pad_left"
	    android:layout_height="wrap_content" >

		<TextView
		    android:id="@+id/traderTextView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:text="@string/trader"
		    android:textStyle="bold" />

		<TextView
		    android:id="@+id/buyingTextView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	    	android:gravity="center"
		    android:layout_weight="1"
		    android:text="@string/buying"
		    android:textStyle="bold" />

		<TextView
		    android:id="@+id/sellingTextView"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	    	android:gravity="center"
		    android:layout_weight="1"
		    android:text="@string/selling"
		    android:textStyle="bold" />

	</LinearLayout>

	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <LinearLayout
	    	android:id="@+id/itemsLinearLayout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	    </LinearLayout>
	</ScrollView>

	<TextView
	    android:id="@+id/lastUpdated"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	     />

	<TextView
	    android:layout_width="wrap_content"
	    android:gravity="center"
	    android:paddingTop="@dimen/activity_pad_left"
	    android:layout_height="wrap_content"
	    android:text="@string/disclaimer" />

	<TextView
	    android:id="@+id/kenrickTextView"
	    android:gravity="center"
	    android:paddingTop="@dimen/activity_pad_left"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    />

	<TextView
	    android:id="@+id/deanoTextView"
	    android:gravity="center"
	    android:layout_width="fill_parent"
	    android:paddingTop="@dimen/activity_pad_left"
	    android:layout_height="wrap_content"
	     />

</LinearLayout>
